// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0 models to download (network failure), 0 models downloaded and no model in use 1`] = `
<RCTScrollView
  contentInsetAdjustmentBehavior="automatic"
  style={
    [
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View>
    <Text
      style={
        {
          "marginVertical": 12,
          "paddingTop": 16,
        }
      }
      variant="h4"
    >
      screens.models.availableToDownload
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "paddingVertical": 32,
        }
      }
    >
      <Text
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        screens.models.errorCannotGetModelsAtTheMoment
      </Text>
      <Button
        icon={
          {
            "androidIconName": "refresh",
            "iosIconName": "arrow.clockwise",
          }
        }
        onPress={[Function]}
        title="common.retry"
      />
    </View>
    <Text>
      screens.models.youHaveDownloadedAllTheModels
    </Text>
  </View>
</RCTScrollView>
`;

exports[`0 models to download (network failure), 1 model downloaded and 1 in use 1`] = `
<RCTScrollView
  contentInsetAdjustmentBehavior="automatic"
  style={
    [
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View>
    <Text
      style={
        {
          "marginBottom": 16,
        }
      }
      variant="h4"
    >
      screens.models.inUse
    </Text>
    <ModelCard
      isSelected={true}
      model={
        {
          "author": "Author",
          "family": "Family",
          "huggingfaceUrl": "https://huggingface.co/test/model-10",
          "id": 10,
          "languages": [],
          "name": "Model 10",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "tags": [],
          "thinking": false,
        }
      }
    />
    <Text
      style={
        {
          "marginVertical": 12,
          "paddingTop": 16,
        }
      }
      variant="h4"
    >
      screens.models.readyToUse
    </Text>
    <ListItem
      androidIconName="deployed_code_update"
      iconBackgroundColor="#628395"
      iosIconName="arrow.down.circle.fill"
      onPress={[Function]}
      subtitle="screens.models.modelCount"
      title="screens.models.downloaded"
    />
    <Text
      style={
        {
          "marginVertical": 12,
          "paddingTop": 16,
        }
      }
      variant="h4"
    >
      screens.models.availableToDownload
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "paddingVertical": 32,
        }
      }
    >
      <Text
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        screens.models.errorCannotGetModelsAtTheMoment
      </Text>
      <Button
        icon={
          {
            "androidIconName": "refresh",
            "iosIconName": "arrow.clockwise",
          }
        }
        onPress={[Function]}
        title="common.retry"
      />
    </View>
    <Text>
      screens.models.youHaveDownloadedAllTheModels
    </Text>
  </View>
</RCTScrollView>
`;

exports[`2 models to download, 2 models downloaded and 1 in use 1`] = `
<RCTScrollView
  contentInsetAdjustmentBehavior="automatic"
  style={
    [
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View>
    <Text
      style={
        {
          "marginBottom": 16,
        }
      }
      variant="h4"
    >
      screens.models.inUse
    </Text>
    <ModelCard
      isSelected={true}
      model={
        {
          "author": "Author",
          "family": "Family",
          "huggingfaceUrl": "https://huggingface.co/test/model-10",
          "id": 10,
          "languages": [],
          "name": "Model 10",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "tags": [],
          "thinking": false,
        }
      }
    />
    <Text
      style={
        {
          "marginVertical": 12,
          "paddingTop": 16,
        }
      }
      variant="h4"
    >
      screens.models.readyToUse
    </Text>
    <ListItem
      androidIconName="deployed_code_update"
      iconBackgroundColor="#628395"
      iosIconName="arrow.down.circle.fill"
      onPress={[Function]}
      subtitle="screens.models.modelCount"
      title="screens.models.downloaded"
    />
    <Text
      style={
        {
          "marginVertical": 12,
          "paddingTop": 16,
        }
      }
      variant="h4"
    >
      screens.models.availableToDownload
    </Text>
    <ModelCard
      model={
        {
          "author": "Author",
          "family": "Family",
          "huggingfaceUrl": "https://huggingface.co/test/model-20",
          "id": 20,
          "languages": [],
          "name": "Model 20",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "tags": [],
          "thinking": false,
        }
      }
      onPress={[Function]}
    />
    <ModelCard
      model={
        {
          "author": "Author",
          "family": "Family",
          "huggingfaceUrl": "https://huggingface.co/test/model-21",
          "id": 21,
          "languages": [],
          "name": "Model 21",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "tags": [],
          "thinking": false,
        }
      }
      onPress={[Function]}
    />
  </View>
</RCTScrollView>
`;
